--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,11 @@
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  height: 100vh;
+  background: rgb(2,0,36);
+  background: linear-gradient(304deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 100%);
+  font-family: 'Rubik Mono One', sans-serif;
+  color: #78909c;
 }
