--- a/src/JokeList.css
+++ b/src/JokeList.css
@@ -17,11 +17,15 @@
 }
 
 .JokeList-title {
-  font-size: 4rem;
+  font-size: 2.5rem;
   margin: 2rem;
   color: white;
-  font-weight: 300;
+  font-weight: 100;
   letter-spacing: 0.6rem;
+}
+
+.JokeList-title span {
+  font-weight: 300;
 }
 
 .JokeList-title span {
