--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,6 @@
   height: 100vh;
   background: rgb(2,0,36);
   background: linear-gradient(304deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 100%);
-  font-family: 'Rubik Mono One', sans-serif;
+  font-family: 'Rubik', sans-serif;
   color: #78909c;
 }
