--- a/src/JokeList.css
+++ b/src/JokeList.css
@@ -25,11 +25,7 @@
 }
 
 .JokeList-title span {
-  font-weight: 300;
-}
-
-.JokeList-title span {
-  font-weight: 100;
+  font-weight: 800;
   letter-spacing: 0;
 }
 
@@ -49,5 +45,24 @@
 }
 .JokeList-spinner {
   color: white;
-  text-align: ;
+  text-align: center;
+}
+.JokeList-getmore{
+  font-size: 1rem;
+  width: 50%;
+  border-radius: 2rem;
+  padding: 1rem 2rem;
+  color: white;
+  transition: 0.8s cubic-bezier(0.2,2,0.2,1);
+  font-weight: 700;
+  border: none;
+  outline: none;
+  background: #7e57c2;
+  margin-top: 2rem;
+  box-shadow: 0 0 30px rgba(0,0,0,0.3);
+  cursor: pointer;
+}
+.JokeList-getmore:hover {
+  transform: translateY(-3px);
+  background: #9575cd;
 }
