--- a/src/Joke.css
+++ b/src/Joke.css
@@ -22,8 +22,8 @@
 
 .Joke-votes {
   width: 50px;
-  height: 50px;
-  line-height: 50px;
+  height: 45px;
+  line-height: 45px;
   border-radius: 50%;
   text-align: center;
   font-size: 20px;
@@ -36,10 +36,73 @@
   font-size: 0.8rem;
   margin: 10px;
   cursor: pointer;
+  transition: all 0.3s;
+}
+
+.lni-angle-double-up:hover {
+  animation-name: move-up;
+  animation-duration: 0.7s;
+  animation-timing-function: ease-out;
+  color: green;
+}
+
+@keyframes move-up {
+  0%,
+  50%,
+  100% {
+    transform: translateY(0);
+  }
+  25%,
+  75% {
+    transform: translateY(-5px);
+  }
+}
+
+.lni-angle-double-down:hover {
+  animation-name: move-down;
+  animation-duration: 0.7s;
+  animation-timing-function: ease-out;
+  color: red;
+}
+
+@keyframes move-down {
+  0%,
+  50%,
+  100% {
+    transform: translateY(0);
+  }
+  25%,
+  75% {
+    transform: translateY(5px);
+  }
 }
 
 .Joke-smiley {
   font-size: 1.5rem;
   margin-left: auto;
   border-radius: 50%;
+}
+
+.Joke-smiley:hover {
+  animation-name: spin;
+  animation-duration: 0.7s;
+  
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  30% {
+    transform: rotate(20deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  80% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
