--- a/src/JokeList.css
+++ b/src/JokeList.css
@@ -12,8 +12,38 @@
   justify-content: center;
   width: 30%;
   text-align: center;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.3), 0 15px 12px rgba(0,0,0),inset 0 0 25px #7e57c2;
+  box-shadow: 0 19px 20px rgba(0,0,0,0.3), 0 15px 12px rgba(0,0,0),inset 0 0 25px #7e57c2;
   z-index: 2;
+}
+
+.JokeList-sidebar img {
+  box-shadow: 0 0 30px rgba(0,0,0,0.3);
+}
+
+.JokeList-sidebar img:hover {
+  animation-name: shake;
+  animation-duration: 5s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 0s;
+  
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-5px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(10px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
 
 .JokeList-title {
